# tfg

./: README.md
anbx-ide-exe-win/: .gitignore  readme.txt  run_anbx.bat
anbx-ide-exe-win/.metadata/: .lock_info  version.ini
anbx-ide-exe-win/casestudies/: .project  AndrewSecureRPC.AnB  AndrewSecureRPC.if  AndrewSecureRPC_Attack.AnBx  AndrewSecureRPC_AttackTrace_active.AnBx  AndrewSecureRPC_ReplayAttack.AnBx  AndrewSecureRPC_intr.oxna  AndrewSecureRPC_intr2.AnBx  AndrewSecureRPC_intr_fix.AnBx  Bilateral_Key_Exchange.AnBx  DenningSacco.AnBx  Fresh_From_A_intr.AnBx  Fresh_from_A_with_DH.AnBx  From_A_Secret.AnBx  From_A_and_Back.AnBx  GSM_intr.AnBx  Goss.AnB  ISO4pass_intr.AnBx  ISO5pass_intr.AnBx  ISOCCFThreePassMutual.AnB  ISOCCFTwoPassUnilateralAuthProt.AnBx  ISOpubKeyOnePassUnilateralAuthProt.AnBx  ISOpubKeyTwoPassMutualAuthProt.AnBx  ISOpubKeyTwoPassMutualAuthProtAwauthB.AnBx  ISOpubKeyTwoPassMutualAuthProtAwauthB_intr.AnBx  ISOpubKeyTwoPassMutualAuthProtBwauthA.AnBx  ISOpubKeyTwoPassMutualAuthProtBwauthA_intr.AnBx  ISOsymKeyTwoPassMutualAuthProt.AnBx  Insecure_Const.AnBx  Kerberos_PKINIT_intr.AnBx  KeyEx1.AnBx  KeyEx1_intr.AnBx  KeyEx3.AnBx  KeyEx4.AnBx  KeyEx4b_dishonestA.AnBx  KeyEx5.AnBx  NSPK_intr.AnBx  Orig_2KP.AnBx  PK_Lookup.AnBx  Rev_2KP.AnBx  (+20 more)
anbx-ide-exe-win/genAnBx/: .project
anbx-ide-exe-win/logs/: AndrewSecureRPC_intr.sh  andrew_A.txt  andrew_B.txt  andrew_intr.txt  andrew_log.txt  gsm_log.txt  iso4_log.txt  iso5_log.txt  keyex_log.txt  nspk_log.txt  woolam_log.txt
anbx_mod/anbx.2025.01/anbx.2025.01/AnBx2/: AnBx3.cabal  cabal.project
anbx_mod/anbx.2025.01/anbx.2025.01/AnBx2/STemplates/: Channels.st  Dockerfile.st  Functions.st  ObjCheck.st  ROLE_x.st
anbx_mod/anbx.2025.01/anbx.2025.01/AnBx2/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
anbx_mod/anbx.2025.01/anbx.2025.01/AnBx2/src/: AnB2IF_Common.hs  AnB2IF_LMsg.hs  AnB2IF_Msg.hs  AnB2NExecnarr.hs  AnB2NExpression.hs  AnB2PVT.hs  AnB2Spyer.hs  AnBAst.hs  AnBTypeSystem_Evaluator.hs  AnBxAst.hs  AnBxDefinitions.hs  AnBxImplementationCIF.hs  AnBxIntr.hs  AnBxLexer.x  AnBxMain.hs  AnBxMsg.hs  AnBxMsgCommon.hs  AnBxMsgLexer.x  AnBxMsgParser.y  AnBxParser.y  JavaAst.hs  JavaCodeGen.hs  JavaCodeGenConfig.hs  JavaType.hs  Java_TypeSystem_Context.hs  Java_TypeSystem_Evaluator.hs  Java_TypeSystem_JType.hs  Main.hs  Main_Common.hs  OFMCTraceUtils.hs  Spyer_Execnarr.hs  Spyer_Knowledge.hs  Vdm.hs
anbx_new/: .classpath  .gitignore  .project  readme.txt
anbx_new/AnBx2/: AnBx3.cabal  build_anbxc.ps1
anbx_new/casestudies/: Amended_NSCK.AnB  Amended_NSCK.pv  AnBx_BlindForwarding.AnB  AnBx_BlindForwarding.AnBx  AnBx_BlindForwarding.pv  AnBx_Fresh_from_A.AnB  AnBx_Fresh_from_A.AnBx  AnBx_Fresh_from_A.pv  AnBx_Fresh_from_A_with_DH.AnB  AnBx_Fresh_from_A_with_DH.AnBx  AnBx_Fresh_from_A_with_DH.pv  AnBx_From_A_secret_for_B_C_honest.AnB  AnBx_From_A_secret_for_B_C_honest.AnBx  AndrewSecureRPC.AnB  AndrewSecureRPC.exna  AndrewSecureRPC.oxna  AndrewSecureRPC.pv  AndrewSecureRPC.spyer  AndrewSecureRPC.txna  AndrewSecureRPC_intr.AnBx  AndrewSecureRPC_intr.exna  AndrewSecureRPC_intr.txna  AndrewSecureRPC_replay.AnB  AndrewSecureRPC_replay.AnBx  (+171 more)
casos_prueba/: README.md  log_extractor.py  logsextractor.py
logextractor/: logsextractor.py
(+2865 files in other folders)
