cabal-version:  3.12

name:           anbxc
build-type:     Simple
author:         Paolo Modesti
stability:      experimental
maintainer:     Paolo Modesti
synopsis:       AnBx Compiler and Code Generator
description:    AnBx Compiler and Code Generator
license:        GPL-3.0-only
license-file:   gpl.txt
version:        2025.1
homepage:       https://www.dais.unive.it/~modesti/anbx/

executable anbxc
  main-is:         Main.hs
  hs-source-dirs:  src
  Ghc-options: -W -O2 -Wmissing-signatures
               -fbreak-on-error -fbreak-on-exception -rtsopts 
  --              -Wcompat -Widentities -Wincomplete-uni-patterns
  --               prof -fprof-auto -rtsopts 
  --              -fwrite-ide-info
  --              -hiedir=.hie  
  --              -fhpc
  other-modules:
                   AnB2IF_Common,
                   AnB2IF_LMsg,
                   AnB2IF_Msg,
                   AnB2IF_MsgPat,
                   AnB2IF_Translator, 
                   AnB2Latex,
                   AnB2NExecnarr,
                   AnB2NExpression,
                   AnB2PVT,
                   AnB2Spyer,
                   AnBAst,
                   AnBShow,
                   AnBTypeChecking,
                   AnBTypeSystem_Context,
                   AnBTypeSystem_Evaluator,
                   AnBxAst,
                   AnBxDefinitions,
                   AnBxImplementation,
                   AnBxImplementationCIF,
                   AnBxIntr,
                   AnBxMain,
                   AnBxMsg,
                   AnBxMsgCommon,
                   AnBxOnP,
                   AnBxShow,
                   JavaAst,
                   JavaCodeGen,
                   JavaCodeGenConfig,
                   JavaType,
                   Java_TypeSystem_Context,
                   Java_TypeSystem_Evaluator,
                   Java_TypeSystem_JType,
                   Main_Common,
                   OFMCTraceUtils,
                   Spyer_Ast,
                   Spyer_Common,
                   Spyer_Execnarr,
                   Spyer_Knowledge,
                   Spyer_Message,
                   Spyer_Spi,
                   Vdm,
                   VdmTest,
                   AnBxLexer,
                   AnBxParser,
                   OFMCTraceLexer,
                   OFMCTraceParser
				   
  build-tool-depends: alex:alex, happy:happy
  
  build-depends:   
                    base >=4.11 && <5,
                    array,
                    bytestring,
                    ConfigFile >= 1.1.4,
                    containers,
                    directory,
                    filepath,
                    hashable,
                    hashids,
                    HStringTemplate,
                    ip >= 1.7,
                    MissingH,
                    mtl <2.3,
                    network,
                    network-info,
                    random,
                    siphash,
                    split,
                    text,
                    time,
                    utf8-string
  default-extensions:      
                   BangPatterns, 
                   FlexibleInstances, 
                   TypeSynonymInstances
